Ease events status update

--- a/resonite_communities/clients/web/templates/admin/base.html
+++ b/resonite_communities/clients/web/templates/admin/base.html
@@ -5,6 +5,7 @@
         <p class="menu-label">General</p>
         <ul class="menu-list">
           <li><a class="{{ 'is-active' if request.url.path == '/admin/communities' else '' }}" href="{{ '/admin/communities' }}">Communities</a></li>
+          <li><a class="{{ 'is-active' if request.url.path == '/admin/events' else '' }}" href="{{ '/admin/events' }}">Events</a></li>
         </ul>
         <p class="menu-label">Administration</p>
         <ul class="menu-list">
