--- a/resonite_communities/clients/web/templates/admin/communities.html
+++ b/resonite_communities/clients/web/templates/admin/communities.html
@@ -17,6 +17,43 @@
 </div>
 
 <div id="events_communities" style="width: 100%;">
+
+    <button class="button is-success update-event-status" data-event_id="42">Update</button>
+
+    <div class="dropdown">
+        <div class="dropdown-trigger">
+            <button class="button" aria-haspopup="true" aria-controls="dropdown-menu">
+                <span>Status</span>
+                <span class="icon is-small">
+                    <i class="fas fa-angle-down" aria-hidden="true"></i>
+                </span>
+            </button>
+        </div>
+        <div class="dropdown-menu" id="dropdown-menu" role="menu">
+            <div class="dropdown-content">
+                    <a class="dropdown-item" data-status="ACTIVE" data-event_id="43" > ACTIVE </a>
+                    <a class="dropdown-item" data-status="CANCELLED" data-event_id="43" > CANCELLED </a>
+            </div>
+        </div>
+    </div>
+
+    <div class="dropdown">
+        <div class="dropdown-trigger">
+            <button class="button" aria-haspopup="true" aria-controls="dropdown-menu">
+                <span>Status</span>
+                <span class="icon is-small">
+                    <i class="fas fa-angle-down" aria-hidden="true"></i>
+                </span>
+            </button>
+        </div>
+        <div class="dropdown-menu" id="dropdown-menu" role="menu">
+            <div class="dropdown-content">
+                    <a class="dropdown-item" data-status="ACTIVE" data-event_id="42" > ACTIVE </a>
+                    <a class="dropdown-item" data-status="CANCELLED" data-event_id="42" > CANCELLED </a>
+            </div>
+        </div>
+    </div>
+
     <button class="button is-success modal-add-community-trigger" data-target="modal-add-community">Add community</button>
     <table class="table is-fullwidth">
         <thead>
@@ -178,57 +215,160 @@
 
 <script>
     document.addEventListener('DOMContentLoaded', () => {
-  // Functions to open and close a modal
-  function openModal($el) {
-    $el.classList.add('is-active');
-  }
 
-  function closeModal($el) {
-    $el.classList.remove('is-active');
-  }
+        // Add click event on button to do something special
+        (document.querySelectorAll('.update-event-status') || []).forEach(($trigger) => {
+            const event_id = $trigger.dataset.event_id;
 
-  function closeAllModals() {
-    (document.querySelectorAll('.modal') || []).forEach(($modal) => {
-      closeModal($modal);
+            $trigger.addEventListener('click', async () => {
+                console.log('ITS BEEN CLICKED!');
+                console.log(event_id);
+
+                const response = await fetch('http://resonite-communities.local/v2/admin/events/update_status', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify({
+                        id: event_id
+                    })
+                });
+
+                if (response.ok) {
+                    const result = await response.json();
+                    console.log('Ok, result: ', result)
+                } else {
+                    const result = await response.json();
+                    console.log('Not Ok, result: ', result)
+                }
+            })
+        });
+
+    })
+</script>
+
+<script>
+    document.addEventListener('DOMContentLoaded', () => {
+        const dropdownTriggers = document.querySelectorAll('.dropdown-trigger')
+
+        dropdownTriggers.forEach(trigger => {
+            const dropdown = trigger.closest('.dropdown');
+
+            // Toggle dropdown
+            trigger.addEventListener('click', () => {
+                dropdown.classList.toggle('is-active');
+            });
+        });
+
+        // Exit dropdown
+        document.addEventListener('click', (event) => {
+            const dropdowns = document.querySelectorAll('.dropdown');
+            dropdowns.forEach(dropdown => {
+                if (!dropdown.contains(event.target)) {
+                    dropdown.classList.remove('is-active');
+                }
+            });
+        });
+    })
+</script>
+
+<script>
+    document.addEventListener('DOMContentLoaded', () => {
+        (document.querySelectorAll('.dropdown-item[data-status]') || []).forEach(($item) => {
+            $item.addEventListener('click', async () => {
+                const status = $item.dataset.status;
+                const event_id =$item.dataset.event_id;
+
+                console.log('Status selected: ', status);
+                console.log('For event: ', event_id);
+
+                const dropdown = $item.closest('.dropdown');
+
+                dropdown.classList.remove('is-active');
+
+                const response = await fetch('http://resonite-communities.local/v2/admin/events/update_status', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({
+                        id: event_id,
+                        status: status,
+                    })
+                });
+
+                if (response.ok) {
+                    const result = await response.json();
+                    console.log('Status updated successfully', result);
+                    const statusSpan = dropdown.querySelector('.dropdown-trigger span')
+
+                    if (['ACTIVE', 'CANCELLED'].includes(result.status)) {
+                        statusSpan.textContent = result.status;
+                    } else {
+                        console.log('Invalid status received:', result.status)
+                    }
+                } else {
+                    const result = await response.json();
+                    console.log('Failed to update statys:', result);
+                }
+            });
+        });
     });
-  }
+</script>
 
-  // Add a click event on buttons to open a specific modal
-  (document.querySelectorAll('.modal-add-community-trigger') || []).forEach(($trigger) => {
-    const modal = $trigger.dataset.target;
-    const $target = document.getElementById(modal);
+<script>
+    document.addEventListener('DOMContentLoaded', () => {
+        // Functions to open and close a modal
+        function openModal($el) {
+            $el.classList.add('is-active');
+        }
 
-    $trigger.addEventListener('click', () => {
-      openModal($target);
-    });
-  });
+        function closeModal($el) {
+            $el.classList.remove('is-active');
+        }
 
-    // Add a click event on buttons to open a specific modal
-    (document.querySelectorAll('.modal-add-stream-trigger') || []).forEach(($trigger) => {
-    const modal = $trigger.dataset.target;
-    const $target = document.getElementById(modal);
+        function closeAllModals() {
+            (document.querySelectorAll('.modal') || []).forEach(($modal) => {
+                closeModal($modal);
+            });
+        }
 
-    $trigger.addEventListener('click', () => {
-      openModal($target);
-    });
-  });
+        // Add a click event on buttons to open a specific modal
+        (document.querySelectorAll('.modal-add-community-trigger') || []).forEach(($trigger) => {
+            const modal = $trigger.dataset.target;
+            const $target = document.getElementById(modal);
+
+            $trigger.addEventListener('click', () => {
+                openModal($target);
+            });
+        });
+
+        // Add a click event on buttons to open a specific modal
+        (document.querySelectorAll('.modal-add-stream-trigger') || []).forEach(($trigger) => {
+            const modal = $trigger.dataset.target;
+            const $target = document.getElementById(modal);
+
+            $trigger.addEventListener('click', () => {
+            openModal($target);
+            });
+        });
 
 
-  // Add a click event on various child elements to close the parent modal
-  (document.querySelectorAll('.modal-background, .modal-close, .modal-card-head .delete, .modal-card-foot .button') || []).forEach(($close) => {
-    const $target = $close.closest('.modal');
+        // Add a click event on various child elements to close the parent modal
+        (document.querySelectorAll('.modal-background, .modal-close, .modal-card-head .delete, .modal-card-foot .button') || []).forEach(($close) => {
+            const $target = $close.closest('.modal');
 
-    $close.addEventListener('click', () => {
-      closeModal($target);
-    });
-  });
+            $close.addEventListener('click', () => {
+            closeModal($target);
+            });
+        });
 
-  // Add a keyboard event to close all modals
-  document.addEventListener('keydown', (event) => {
-    if(event.key === "Escape") {
-      closeAllModals();
-    }
-  });
+        // Add a keyboard event to close all modals
+        document.addEventListener('keydown', (event) => {
+            if(event.key === "Escape") {
+            closeAllModals();
+            }
+        });
 });
 </script>
 
