--- a/resonite_communities/clients/web/templates/admin/communities.html
+++ b/resonite_communities/clients/web/templates/admin/communities.html
@@ -224,7 +224,7 @@
                 console.log('ITS BEEN CLICKED!');
                 console.log(event_id);
 
-                const response = await fetch('http://resonite-communities.local/v2/admin/events/update_status', {
+                const response = await fetch('{{ api_url }}/v2/admin/events/update_status', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
@@ -286,7 +286,7 @@
 
                 dropdown.classList.remove('is-active');
 
-                const response = await fetch('http://resonite-communities.local/v2/admin/events/update_status', {
+                const response = await fetch('{{ api_url }}/v2/admin/events/update_status', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
